# QWeb

./: .gitignore  .gitmessage  AGENTS.md  AGENT_TODO.md  CLAUDE.md  DESIGN.md  index.html  redocly.yaml
backend/: .env.example  AGENTS.md  manage.py  pyproject.toml  requirements.txt
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  admin.py  apps.py  managers.py  tests.py  urls.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_oauthidentity.py  0002_repair_legacy_account_tables.py  0003_repair_legacy_external_user_foreign_keys.py  __init__.py
backend/apps/accounts/models/: __init__.py  oauth_account.py  oauth_identity.py  refresh_token.py  user.py  user_contact.py  user_profile.py  user_security.py  user_settings.py
backend/apps/accounts/selectors/: __init__.py  user_selector.py
backend/apps/accounts/services/: __init__.py  account_bootstrap.py  auth_service.py  bootstrap_service.py  github_oauth.py  github_oauth_provider.py  oauth_service.py  oauth_types.py  token_service.py  user_service.py  username_policy.py
backend/apps/audit/: __init__.py  admin.py  apps.py  urls.py
backend/apps/audit/api/: serializers.py  views.py
backend/apps/audit/migrations/: 0001_initial.py  0002_repair_legacy_login_log_table.py  (+3 more)
backend/apps/core/: apps.py  exception_handler.py  exceptions.py  pagination.py  responses.py  views.py
backend/apps/homepage/: __init__.py  admin.py  apps.py  urls.py
backend/apps/iam/: __init__.py  admin.py  apps.py  permissions.py  urls.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: README.md  (+3 more)
(+166 files in other folders)
