[project]
name = "QWeb"
version = "0.1.0"
description = "The Backend Of Qintsg's Web"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.16,<4.0",
    "drf-spectacular>=0.28,<1.0",
    "django-filter>=24.0,<26.0",
    "djangorestframework-simplejwt>=5.4,<6.0",
    "django-cors-headers>=4.0,<5.0",
    "psycopg[binary]>=3.2,<4.0",
    "python-dotenv>=1.0,<2.0",
]
